--- a/budget_prog/templates/reset_request.html
+++ b/budget_prog/templates/reset_request.html
@@ -27,7 +27,7 @@
             {{ form.submit(class="btn btn-outline-primary") }}
         </div>
         <div class="btn-group btn-group-sm">
-            <a href="{{ url_for('registration') }}" class="btn btn-outline-primary" style="margin-left:25px">Sign Up</a>
+            <a href="{{ url_for('signin') }}" class="btn btn-outline-primary" style="margin-left:25px">Sign In</a>
         </div>
     </form>
 </div>
