--- a/budget_prog/templates/base.html
+++ b/budget_prog/templates/base.html
@@ -24,7 +24,7 @@
                     <path d="M9.998 5.083 10 5a2 2 0 1 0-3.132 1.65 5.982 5.982 0 0 1 3.13-1.567z"/>
                 </svg>
             </a>
-            <h2 class="ms-3">Accounting program</h2>
+            <h2 class="ms-3">Budget program</h2>
 
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                 {% if current_user.is_authenticated %}
